[package]
name = "learn_rust_with_tests"
version = "0.1.0"
authors = ["Chris James <qui666@gmail.com>"]
edition = "2018"

[[bin]]
name = "hello_world"
path = "src/hello_world/bin/hello_world.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]